--- a/index.html
+++ b/index.html
@@ -3,28 +3,64 @@
 
 <head>
   <meta charset="utf-8">
-  <title>TinDog</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <title>Bulllet Royal Accessories</title>
+  <!-- BootStrap 5.0 Link -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+  <!-- BootStrap 4.0 Script -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="styles.css">
+  <!-- google fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;900&family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
+  <!-- Font Icon Link -->
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
+  <script defer src="https://use.fontawesome.com/releases/v5.15.3/js/all.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.15.3/js/v4-shims.js"></script>
+
 </head>
 
 <body>
 
   <section id="title">
-
+    <div class="container-fluid">
     <!-- Nav Bar -->
+<nav class="navbar navbar-expand-lg navbar-dark ">
+    <a class="navbar-brand" href=""> Bullet Royal Accessories<i class="fad fa-motorcycle"></i></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+        <li class="nav item">
+            <a class="nav-link" href="">Contact</a>
+        </li>
+        <li class="nav item">
+            <a class="nav-link" href="">Pricing</a>
+        </li>
+        <li class="nav item">
+            <a class="nav-link" href="">Download</a>
+        </li>
+    </ul>
+    </div>
+</nav>
 
 
 
 
     <!-- Title -->
 
-    <div>
-      <h1>Meet new and interesting dogs nearby.</h1>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
-    </div>
-    <div>
-      <img src="images/iphone6.png" alt="iphone-mockup">
+    <div class="pb">
+      <h1 class="h">BULLET</h1>
+      <h1>ROYAL</h1>
+      <h1>ACCESSORIES</h1>
+      <h3 class="sub-title">All Genuine Spare Parts & Accessories</h3>
+      <button class="btn btn-outline-light btn-lg" type="button"><i class="fab fa-motorcycle"></i> Know More</button>
     </div>
 
   </section>
@@ -33,15 +69,25 @@
   <!-- Features -->
 
   <section id="features">
-
-    <h3>Easy to use.</h3>
+    <div class="row">
+    <div class="feature-box col-lg-4">
+    <i class="icon fas fa-motorcycle fa-4x"></i>
+    <h3>Genuine Spare Parts.</h3>
     <p>So easy to use, even your dog could do it.</p>
+  </div>
 
-    <h3>Elite Clientele</h3>
+  <div class="feature-box col-lg-4">
+    <i class="icon fas fa-tools fa-4x"></i>
+    <h3>Repairs.</h3>
     <p>We have all the dogs, the greatest dogs.</p>
+  </div>
 
-    <h3>Guaranteed to work.</h3>
+  <div class="feature-box col-lg-4">
+    <i class="icon fas fa-check-circle fa-4x"></i>
+    <h3>Professional Modifications.</h3>
     <p>Find the love of your dog's life or your money back.</p>
+  </div>
+</div>
 
   </section>
 
