--- a/index.html
+++ b/index.html
@@ -71,21 +71,21 @@
   <section id="features">
     <div class="row">
     <div class="feature-box col-lg-4">
-    <i class="icon fas fa-motorcycle fa-4x"></i>
+    <i class="icon fas fa-check-circle fa-4x"></i>
     <h3>Genuine Spare Parts.</h3>
-    <p>So easy to use, even your dog could do it.</p>
+    <p>We are Authorize seller of Vardenchi.</p>
   </div>
 
   <div class="feature-box col-lg-4">
     <i class="icon fas fa-tools fa-4x"></i>
     <h3>Repairs.</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
+    <p>We give the Best Repair servicesin Bhagalpur.</p>
   </div>
 
   <div class="feature-box col-lg-4">
-    <i class="icon fas fa-check-circle fa-4x"></i>
+    <i class="icon fas fa-motorcycle fa-4x"></i>
     <h3>Professional Modifications.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
+    <p>We have Professional Modifier that gives your Bike Modern & Classic looks.</p>
   </div>
 </div>
 
@@ -96,13 +96,58 @@
 
   <section id="testimonials">
 
-    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
-    <em>Pebbles, New York</em>
+    <h2>Parts And Accessories Available !</h2>
+    <p>We also provide the best services for the modification of Royal Enfield. We have earned excellent reputation and goodwill of Customer by providing high quality products and services, timely deliveries and committed customer supports.</p>
 
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="row">
+      <div class="feature-box col-lg-4">
+        <img class="Parts-image" src="headLight.png" alt="head-light">
+        <h4>Head Lights</h4>
+      </div>  
+      <div class="feature-box col-lg-4">
+        <img  class="Parts-image" src="helmet.jpg" alt="helmet">
+        <h4>Helmet</h4>
+      </div>  
+      <div class="feature-box col-lg-4">
+        <img  class="Parts-image" src="rim.png" alt="rim">
+        <h4>Alloy Wheels</h4>
+      </div>  
+    </div>
+
+    </div>
+    <div class="carousel-item">
+          <div class="row">
+      <div class="feature-box col-lg-4">
+        <img class="Parts-image" src="seat.jpg" alt="head-light">
+        <h4>Seat</h4>
+      </div>  
+      <div class="feature-box col-lg-4">
+        <img  class="Parts-image" src="silencer.jpg" alt="helmet">
+        <h4>Silencer</h4>
+      </div>  
+      <div class="feature-box col-lg-4">
+        <img  class="Parts-image" src="legGuard.jpg" alt="rim">
+        <h4>Leg Guard</h4>
+      </div>  
+    </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+    
+
+
 
   </section>
 
