added more item in sliding features

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
   <section id="testimonials">
 
     <h2>Parts And Accessories Available !</h2>
-    <p>We also provide the best services for the modification of Royal Enfield. We have earned excellent reputation and goodwill of Customer by providing high quality products and services, timely deliveries and committed customer supports.</p>
+    <p class="testimonial-para">We also provide the best services for the modification of Royal Enfield. We have earned excellent reputation and goodwill of Customer by providing high quality products and services, timely deliveries and committed customer supports.</p>
 
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="3000">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <div class="row">
@@ -121,16 +121,33 @@
     <div class="carousel-item">
           <div class="row">
       <div class="feature-box col-lg-4">
-        <img class="Parts-image" src="seat.jpg" alt="head-light">
+        <img class="Parts-image" src="seat.jpg" alt="seat">
         <h4>Seat</h4>
       </div>  
       <div class="feature-box col-lg-4">
-        <img  class="Parts-image" src="silencer.jpg" alt="helmet">
+        <img  class="Parts-image" src="silencer.jpg" alt="Silencer">
         <h4>Silencer</h4>
       </div>  
       <div class="feature-box col-lg-4">
-        <img  class="Parts-image" src="legGuard.jpg" alt="rim">
+        <img  class="Parts-image" src="legGuard.jpg" alt="Leg Guard">
         <h4>Leg Guard</h4>
+     </div>  
+    </div>
+  </div>
+
+      <div class="carousel-item">
+          <div class="row">
+      <div class="feature-box col-lg-4">
+        <img class="Parts-image" src="LuggageBox.jpg" alt="LuggageBox">
+        <h4>Luggage Box</h4>
+      </div>  
+      <div class="feature-box col-lg-4">
+        <img  class="Parts-image" src="Mirror.jpg" alt="Mirror">
+        <h4>Mirror</h4>
+      </div>  
+      <div class="feature-box col-lg-4">
+        <img  class="Parts-image" src="Horn.jpg" alt="Horn">
+        <h4>Horn</h4>
       </div>  
     </div>
     </div>
@@ -155,10 +172,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+    <img class="Authorize-logo" src="images/Motul-Logo.png" alt="Motul-logo">
+    <img class="Authorize-logo" src="images/Jawa-Logo.jpg" alt="Jawa-Logo">
+    <img class="Authorize-logo" src="images/Royal-Enfield-Logo.png" alt="Royal-Enfield-logo">
+    <img class="Authorize-logo" src="images/Vardenchi-Logo.png" alt="Vardenchi-logo">
 
   </section>
 
