added Gallery features and Maps

--- a/index.html
+++ b/index.html
@@ -184,42 +184,121 @@
 
   <section id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
+    <h2>The Plans Available Now !</h2>
+    <p>Simple and affordable price plans for your and your Bullet Bikes.</p>
+    <div class="row">
+    <div class="card col-lg-4 col-md-6">
+      <div class="card-header">
+        <h3>Spare Parts</h3>
+      </div>
+      <div class="card-body">
+        <h2>mechanic charge Free</h2>
+        <p>All brand genuine parts Available!</p>
+        <p>10 Messages Per Day</p>
+        <p>Unlimited App Usage</p>
+      </div>
+      <div class="card-footer">
+        <button class="btn btn-lg btn-block btn-outline-dark" type="button">Sign Up</button>
+      </div>
+    </div>
 
+    <div class="card col-lg-4 col-md-6">
+      <div class="card-header">
+        <h3>Repairs</h3>
+      </div>
+      <div class="card-body">
+        <h2>150 INR / hrs</h2>
+        <p>Unlimited Matches</p>
+        <p>Unlimited Messages</p>
+        <p>Unlimited App Usage</p>
+      </div>
+      <div class="card-footer">
+        <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
+      </div>
+    </div>
 
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
+        <div class="card col-lg-4 col-md-12">
+      <div class="card-header">
+        <h3>Professional Modification</h3>
+      </div>
+      <div class="card-body">
+        <h2>$99 / mo</h2>
+        <p>Pirority Listing</p>
+        <p>Unlimited Matches</p>
+        <p>Unlimited Messages</p>
+        <p>Unlimited App Usage</p>
+      </div>
+      <div class="card-footer">
+        <button class="btn btn-lg btn-block btn-dark" type="button">Sign Up</button>
+      </div>
+    </div>
   </section>
+
+<!-- Gallery -->
+<section id="Gallery">
+  <h3 class="Gallery-title">Modification gallery</h3>
+  <div class="row">
+    <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+      <img
+        src="images/7.jpeg"
+        class="w-100 shadow-1-strong rounded mb-4"
+        alt=""
+      />
+
+      <img
+        src="images/2.jpeg"
+        class="w-100 shadow-1-strong rounded mb-4"
+        alt=""
+      />
+    </div>
+
+    <div class="col-lg-4 mb-4 mb-lg-0">
+      <img
+        src="images/6.jpeg"
+        class="w-100 shadow-1-strong rounded mb-4"
+        alt=""
+      />
+
+      <img
+        src="images/3.jpeg"
+        class="w-100 shadow-1-strong rounded mb-4"
+        alt=""
+      />
+    </div>
+
+    <div class="col-lg-4 mb-4 mb-lg-0">
+      <img
+        src="images/4.jpeg"
+        class="w-100 shadow-1-strong rounded mb-4"
+        alt=""
+      />
+
+      <img
+        src="images/5.jpeg"
+        class="w-100 shadow-1-strong rounded mb-4"
+        alt=""
+      />
+    </div>
+  </div>
+</section>
+<!-- Gallery -->
+
+<!-- Map Route -->
+
+<section id="map">
+  <h3 class="follow-route">Follow the Route!</h3>
+  <div class="mapouter">
+    <div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=Bullet Royal Accessories Nathnagar Block Road, Tatarpur, Bhagalpur, Bihar 812002&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://www.fridaynightfunkin.net/">Friday Night Funkin Download</a></div>
+  </div>
+</section>
+
 
 
   <!-- Call to Action -->
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
+    <h3>Proprieter Informations</h3>
     <button type="button">Download</button>
     <button type="button">Download</button>
 
